Fix: Align table's column data to left - In some cases, it just didn't align to left (Tested on Firefox 3.5), there was a gap between table's border and the column data

--- a/css/ui.jqgrid.css
+++ b/css/ui.jqgrid.css
@@ -25,7 +25,7 @@
 .ui-jqgrid tr.ui-search-toolbar th { border-top-width: 1px !important; border-top-color: inherit !important; border-top-style: ridge !important }
 /* body */ 
 .ui-jqgrid .ui-jqgrid-bdiv {position: relative;margin : 0em; padding:0; overflow: auto;}
-.ui-jqgrid .ui-jqgrid-btable {table-layout:fixed;}
+.ui-jqgrid .ui-jqgrid-btable {table-layout:fixed; margin-left:0px}
 .ui-jqgrid tr.jqgrow td {border-right-width: 1px; border-right-color: inherit; border-right-style: solid;border-bottom-width: 1px; border-bottom-color: inherit; border-bottom-style: solid;}
 .ui-jqgrid tr.jqgrow td {font-weight: normal; overflow: hidden; text-align:left; white-space: pre; height: 22px;padding: 0 2px 0 2px;}
 .ui-jqgrid td.jqgrid-rownum { padding: 0 2px 0 2px; margin: 0px; border: 0px none;}
